--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "homepage": "https://github.com/fluree/fql-react#readme",
   "main": "lib/index.js",
   "scripts": {
-    "prepublish": "./node_modules/.bin/babel -d lib src/"
+    "prepublish": "babel -d lib src/"
   },
   "dependencies": {
     "hoist-non-react-statics": "^1.2.0"
@@ -28,7 +28,6 @@
     "react": "^15.0.0"
   },
   "devDependencies": {
-    "babel": "^6.5.2",
     "babel-core": "^6.22.1",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
