--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "homepage": "https://github.com/fluree/fql-react#readme",
   "main": "lib/index.js",
   "scripts": {
-    "prepublish": "babel -d lib src/"
+    "build": "babel src -d lib"
   },
   "dependencies": {
     "hoist-non-react-statics": "^1.2.0"
@@ -28,6 +28,7 @@
     "react": "^15.0.0"
   },
   "devDependencies": {
+    "babel-cli": "^6.23.0",
     "babel-core": "^6.22.1",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
