--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "build": "babel src -d lib"
   },
   "dependencies": {
+    "console-polyfill": "^0.2.3",
     "hoist-non-react-statics": "^1.2.0"
   },
   "peerDependencies": {
