--- a/package.json
+++ b/package.json
@@ -23,15 +23,15 @@
   },
   "dependencies": {
     "console-polyfill": "^0.2.3",
-    "hoist-non-react-statics": "^1.2.0",
-    "react": "^15.0.0"
+    "glob": "^7.1.2",
+    "hoist-non-react-statics": "^1.2.0"
   },
   "devDependencies": {
     "babel-cli": "^6.23.0",
-    "babel-core": "^6.22.1",
+    "babel-core": "^6.25.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
     "babel-preset-stage-2": "^6.22.0",
-    "react": "^15.4.2"
+    "react": "^15.6.1"
   }
 }
