--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
   },
   "dependencies": {
     "console-polyfill": "^0.2.3",
-    "hoist-non-react-statics": "^1.2.0",
-    "react": "^15.0.0"
+    "hoist-non-react-statics": "^1.2.0"
   },
   "devDependencies": {
     "babel-cli": "^6.23.0",
@@ -32,6 +31,11 @@
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
     "babel-preset-stage-2": "^6.22.0",
-    "react": "^15.4.2"
+    "react": "^15.6.1",
+    "prop-types": "^15.5.10"
+  },
+  "peerDependencies": {
+    "react": "^15.5.0",
+    "prop-types": "^15.5.0"
   }
 }
